argocd/apps/owntracks/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: owntracks
  name: owntracks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owntracks
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: owntracks
    spec:
      containers:
        - image: owntracks/recorder:latest@sha256:f2ba3b0c814e9b01fc519c6715cbdd8430363e06aa889c69c01b044e155d0c9e
          imagePullPolicy: IfNotPresent
          name: owntracks
          ports:
            - containerPort: 8083
              protocol: TCP
          volumeMounts:
            - mountPath: /store
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              cpu: 50m
              memory: 50Mi
            requests:
              cpu: 10m
              memory: 10Mi
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
