argocd/apps/owntracks/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: owntracks-vs
spec:
  hosts:
  - owntracks.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: owntracks
        port:
          number: 8083
